@@ -1,7 +1,7 @@
 (pathonly "") ; "","",""
 (pathonly "dh0:path") ; "","dh0:",""
-(pathonly "dh0:dir/path") ; "","dh0:dir/",""
-(pathonly "dh0:dir/dir/path") ; "","dh0:dir/dir/",""
+(pathonly "dh0:dir/path") ; "","dh0:dir",""
+(pathonly "dh0:dir/dir/path") ; "","dh0:dir/dir",""
 (pathonly "file") ; "","",""
 (pathonly ":file") ; "",":",""
 (pathonly ":/file") ; "",":/",""
